--- a/ecom/style.css
+++ b/ecom/style.css
@@ -62,3 +62,16 @@
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
 }
+
+.cartElement{
+    height: 100vh;
+    width: 50%;
+    background-color: red;
+    position: absolute;
+    top: 0;
+    transition: .5s;
+    left: -100%;
+}
+.cartElement.active{
+    left: 0 !important;
+}
