--- a/ecom/style.css
+++ b/ecom/style.css
@@ -64,9 +64,10 @@
 }
 
 .cartElement{
+    z-index: 10;
     height: 100vh;
     width: 50%;
-    background-color: red;
+    background-color: rgb(230, 230, 230);
     position: absolute;
     top: 0;
     transition: .5s;
@@ -74,4 +75,12 @@
 }
 .cartElement.active{
     left: 0 !important;
+}
+.cartElement .product{
+    gap: 15px;
+    display: grid;
+    grid-template-columns: 100px auto auto auto;
+}
+.cartElement .product img{
+    width: 100%;
 }
