--- a/react/first/src/App.css
+++ b/react/first/src/App.css
@@ -1,3 +1,14 @@
 .image {
   height: 200px;
 }
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 20px;
+}
+
+.navbar .active {
+  color: tomato;
+}
